--- a/website/apps/profiles/templates/profiles/profile/_detail_info.html
+++ b/website/apps/profiles/templates/profiles/profile/_detail_info.html
@@ -20,6 +20,15 @@
 		<dd>
 			{{ object.user.username }}
 		</dd>
+
+        {% if object.pseudonym %}
+		<dt>
+			{% trans "Pseudonym" %}:
+		</dt>
+		<dd>
+			{{ object.pseudonym }}
+		</dd>
+		{% endif %}
 		
 		{% if object.mentor %}
 		<dt>
