--- a/website/apps/profiles/templates/profiles/profile_detail.html
+++ b/website/apps/profiles/templates/profiles/profile_detail.html
@@ -545,5 +545,11 @@
 
 {% block sidebar %}
     {% include "profiles/profile/sidebar/_detail.html" %}
+
+
+
+	{% include "profiles/profile/sidebar/_edit_transform.html" %}
+
+
 {% endblock %}
 
