--- a/website/site-static/css/wip.css
+++ b/website/site-static/css/wip.css
@@ -2951,15 +2951,19 @@ section.item_inner .tab-pane section.profile.information dl {
   width: 20%;
 }
 /* line 28, ../sass/apps/_atracker.sass */
+.atracker.event-list ul.event li.split-date {
+  width: 10%;
+}
+/* line 30, ../sass/apps/_atracker.sass */
 .atracker.event-list ul.event li.user {
   width: 20%;
 }
-/* line 30, ../sass/apps/_atracker.sass */
+/* line 32, ../sass/apps/_atracker.sass */
 .atracker.event-list ul.event li.type {
   width: 20%;
   text-transform: capitalize;
 }
-/* line 33, ../sass/apps/_atracker.sass */
+/* line 35, ../sass/apps/_atracker.sass */
 .atracker.event-list ul.event li.co {
   width: 20%;
 }
