--- a/website/site-static/sass/apps/_atracker.sass
+++ b/website/site-static/sass/apps/_atracker.sass
@@ -25,6 +25,8 @@
 
         &.date
           width: 20%
+        &.split-date
+          width: 10%
         &.user
           width: 20%
         &.type
