--- a/website/apps/alibrary/templates/alibrary/element/_object_history.html
+++ b/website/apps/alibrary/templates/alibrary/element/_object_history.html
@@ -7,9 +7,9 @@
 			<li class="user"><a href="{{ r.revision.user.get_profile.get_absolute_url }}">{% firstof r.revision.user.get_full_name r.revision.user.username %}</a></li>
 		</ul>
 		<div class="clear"></div>
-        {% comment %}
+        {% comment %}{% endcomment %}
 		<p>{{ r.revision.comment|urlize|linebreaksbr }}</p>
-        {% endcomment %}
+
 	</div>
 	{% endfor %}
 </div>
