--- a/website/apps/alibrary/templates/alibrary/license/_detail_info.html
+++ b/website/apps/alibrary/templates/alibrary/license/_detail_info.html
@@ -19,6 +19,15 @@
         </dd>
         {% endif %}
 
+        {% if object.link %}
+        <dt>
+            {% trans "URL" %}:
+        </dt>
+        <dd>
+           <a href="{{ object.link }}">{{ object.link }}</a>
+        </dd>
+        {% endif %}
+
         <dt>
             {% trans "Created" %}:
         </dt>
