--- a/website/templates/404.html
+++ b/website/templates/404.html
@@ -1,20 +1,13 @@
-{% extends "base.html" %}
+{% extends "error_base.html" %}
 {% load i18n %}
 
-{% block breadcrumbs %}
-<ul class="breadcrumbs">
-  <li>{% trans "Error 404" %}</li>
-</ul>
-{% endblock %}
-
-{% block title %}{% trans "Page not found" %}{% endblock %}
+{% block title %}Page not found{% endblock %}
 
 {% block body-class %}error-404{% endblock %}
 
-{% block main %}
-<h2>{% trans "Page not found" %}</h2>
+{% block content %}
+    <h1>We could not find the page requested.</h1>
 
-<p>{% trans "Sorry, but the requested page could not be found." %}</p>
-
-{{ block.super }}
+    <p>Sorry about that. Please try refreshing or contact our support if you think this page should exist.</p>
+    {{ block.super }}
 {% endblock %}
