--- a/website/site-static/sass/apps/_base.sass
+++ b/website/site-static/sass/apps/_base.sass
@@ -10,5 +10,6 @@
 @import apps/collector
 @import apps/statistics
 @import apps/backfeed
+@import apps/stepguide
 // @import apps/scheduler // stand-alone file a.t.m.
 
