--- a/website/site-static/sass/apps/_importer.sass
+++ b/website/site-static/sass/apps/_importer.sass
@@ -211,7 +211,7 @@ section.importer-importfiles
           height: 66px
         
         &.provider-tag
-          font-size: 11px
+          font-size: 11px !important
           input[type='checkbox']
             display: none
             
