--- a/website/site-static/sass/apps/_playlist_editor.sass
+++ b/website/site-static/sass/apps/_playlist_editor.sass
@@ -336,6 +336,17 @@
           .checkbox input
             display: none
 
+        ul
+          margin: 0
+          > li
+            &.small
+              font-size: 11px
+            &.key
+              font-weight: bold
+              padding: 0 5px 0 0
+              width: 50px
+            &.value
+
       // hide elements
       .advanced-fields, .toggle
         display: none
