--- a/website/site-static/sass/element/_filterbox.sass
+++ b/website/site-static/sass/element/_filterbox.sass
@@ -50,13 +50,12 @@
     background-repeat: no-repeat
 
 .box.boxon
-  background-color: #f5f5f5
-  //border-top:1px solid #ddd;
-  border-left: 1px solid #ddd
-  border-right: 1px solid #ddd
-  //border-bottom:1px solid #ddd;
-  //margin-bottom: 3px;
-
+  //background-color: #f5f5f5
+  //border-left: 1px solid #ddd
+  //border-right: 1px solid #ddd
+  background-color: #fafafa
+  border-left: 1px solid #fff
+  border-right: 1px solid #fafafa
 
 .box.has_active
   background-color: #DDFFD9
