--- a/website/site-static/sass/element/_toolbar.sass
+++ b/website/site-static/sass/element/_toolbar.sass
@@ -6,11 +6,11 @@
 
 // faded bg
 div.navbar-fixed-top
-  // background-color: green
+  background-color: rgba(255, 255, 255, 0.88)
   height: 70px
   //+background-image(linear-gradient(top, #fff 0%, #fff 90%, transparent 100%))
   //background: white
-  background-image: url(/static/img/base/navbar.gradient.png)
+  //background-image: url(/static/img/base/navbar.gradient.png)
   background-repeat: repeat-x
 // AJAX loading indicator
 div.navbar
