--- a/website/site-static/sass/site/_style.sass
+++ b/website/site-static/sass/site/_style.sass
@@ -62,3 +62,7 @@ body.loading-playlist
       &.alert-success
         border-top: 4px solid $successBorder
 
+
+// sidebar hack
+.span3.sidebar
+  //margin-top: 60px
