--- a/website/templates/_templates/layout_a.html
+++ b/website/templates/_templates/layout_a.html
@@ -3,12 +3,12 @@
 {% load cms_tags %}
 
 {% block cms_main %}
-	{% placeholder "main" or %}empty{% endplaceholder %}
+	{% placeholder "main" or %}{% endplaceholder %}
 {% endblock %}
 
 
 {% block cms_sidebar %}
-	{% placeholder "aux" or %}There is no sidebar...{% endplaceholder %}
+	{% placeholder "aux" or %}{% endplaceholder %}
 {% endblock %}
 
 
