--- a/website/apps/alibrary/templates/alibrary/label_edit.html
+++ b/website/apps/alibrary/templates/alibrary/label_edit.html
@@ -77,48 +77,29 @@
 
 {% block form %}
 
-
-
-    {% if form.errors %}
-    {% with form_errors=form.errors %}
-    {% include "element/forms/_merged_form_errors.html" %}
-    {% endwith %}
-    {% endif %}
-
-    {% if form_errors %}
-    {% include "element/forms/_merged_form_errors.html" %}
-    {% endif %}
-
+{% if form_errors %}
+{% include "element/forms/_merged_form_errors.html" %}
+{% endif %}
 
 <div class="item_inner">
 
 	<form class="form-horizontal form-compact form-release" method="post" id="" enctype="multipart/form-data">
 
 		{{ form.management_form }}
-		{{ relation_form.management_form }}
-		{{ releasemedia_form.management_form }}
+		{{ named_formsets.relation.management_form }}
 
-		{% crispy action_form %}
-
-
+		{% crispy named_formsets.action %}
 		{% crispy form %}
-		
-		
 
 		<fieldset class="relations">
 			<legend>
-				Relations<span class="pull-right"></span>
+				{% trans "Relations" %}<span class="pull-right"></span>
 			</legend>
-		
-
-		    {% crispy relation_form %}
+            {% crispy named_formsets.relation %}
             <div class="lookup-container"></div>
-		
 		</fieldset>
 		
-		{% crispy action_form %}
-		
-
+		{% crispy named_formsets.action %}
 
 	</form>
 
