--- a/website/apps/invitation/templates/invitation/invitation_form.html
+++ b/website/apps/invitation/templates/invitation/invitation_form.html
@@ -5,7 +5,7 @@
 
     <div id="heading">
         {% with page_title="Invitation" %}
-        {% include "skeleton/heading.html" %}
+            {% include "skeleton/heading.html" %}
         {% endwith %}
     </div>
 
@@ -13,21 +13,14 @@
 
 {% block content %}
 
-<div class="alert alert-info">
-  <h4>Warning!</h4>
-  Best check yo self, you're not...
-</div>
-
-
-
     <form method='post' class="form-horizontal" action=''>{% csrf_token %}
-
 
         {% include 'invitation/form_fields.html' %}
 
-
         <div class="actions">
-            <input type="submit" class="btn btn-primary pull-right" value="{% trans "Send invitation email" %}"/>
+            <input type="submit"
+                   class="btn btn-primary pull-right"
+                   value="{% trans "Send invitation email" %}"/>
         </div>
     </form>
 
