--- a/website/apps/alibrary/templates/alibrary/release_edit.html
+++ b/website/apps/alibrary/templates/alibrary/release_edit.html
@@ -22,7 +22,7 @@
         <script>
             $(function () {
                 $('.save-and-publish').click(function () {
-                    $('.form-actions #div_id_publish input').prop('checked', true);
+                    $('.form-actions #div_id_action-publish input').prop('checked', true);
                 });
 
                 $('select[readonly] option[selected]').each(function (i, el) {
@@ -50,7 +50,7 @@
 
     {% addtoblock "css" %}
         <style>
-            .form-actions #div_id_publish {
+            .form-actions #div_id_action-publish {
                 display: none;
             }
         </style>
@@ -91,46 +91,21 @@
 
 {% block form %}
 
-
-
+    {% if form_errors %}
+    {% include "element/forms/_merged_form_errors.html" %}
+    {% endif %}
 
     <div class="item_inner">
-
-
-        {% if form_errors %}
-        {% include "element/forms/_merged_form_errors.html" %}
-        {% endif %}
-
 
         <form class="form-horizontal form-compact form-release" method="post" id="" enctype="multipart/form-data">
 
             {{ form.management_form }}
-            {{ relation_form.management_form }}
-            {{ releasemedia_form.management_form }}
+            {{ named_formsets.relation.management_form }}
+            {{ named_formsets.albumartist.management_form }}
+            {{ named_formsets.media.management_form }}
 
-            {% crispy action_form %}
-
-
-
-
-            {% if releasemedia_form.errors or form.errors %}
-
-                <div class="alert alert-error">
-                    <strong>{% trans "Errors in form" %}</strong>
-
-                    <p>{% trans "Please check the given data and correct where marked." %}</p>
-                </div>
-
-
-
-
-
-            {% endif %}
-
-
-
+            {% crispy named_formsets.action %}
             {% crispy form %}
-
 
             <fieldset>
                 <legend>
@@ -143,7 +118,7 @@
                     </p>
                 </div>
 
-                {% crispy albumartist_form %}
+                {% crispy named_formsets.albumartist %}
 
             </fieldset>
 
@@ -154,12 +129,12 @@
                 </legend>
 
 
-                {% crispy relation_form %}
+                {% crispy named_formsets.relation %}
                 <div class="lookup-container"></div>
 
             </fieldset>
 
-            {% crispy action_form %}
+            {% crispy named_formsets.action %}
 
 
             <fieldset>
@@ -169,23 +144,14 @@
             </fieldset>
 
 
-            {% crispy release_bulkedit_form %}
+            {% crispy named_formsets.bulkedit %}
 
             <div id="release_media_form">
-                <!-- offset selector -->
-
 
                 <div class="form-header row-fluid">
 
                     <div id="editor_mode_switch" class="span4">
                         &nbsp;
-                        <!--
-                        <ul class="unstyled horizontal ui-persistent" id="editor_mode" data-uistate="init">
-                            <li>Display</li>
-                            <li><a data-mode="s" href="#"><i class="icon-list"></i></a></li>
-                            <li><a data-mode="m" href="#"><i class="icon-th-list"></i></a></li>
-                        </ul>
-                        -->
                     </div>
 
                     <div id="offset_selector" class="span8">
@@ -208,11 +174,11 @@
 
                 </div>
 
-                {% crispy releasemedia_form %}
+                {% crispy named_formsets.media %}
             </div>
 
 
-            {% crispy action_form %}
+            {% crispy named_formsets.action %}
 
 
         </form>
